// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryButton should render correctly 1`] = `
.gqsqPu {
  border: 2px solid palevioletred;
  background-color: palevioletred;
  color: white;
  padding: 10px;
  border-radius: 4px;
  cursor: pointer;
  -webkit-transition: 300ms all;
  transition: 300ms all;
  font-size: 16px;
}

.gqsqPu:hover {
  background-color: mediumvioletred;
  border-color: mediumvioletred;
}

<button
  className="sc-bdVaJa gqsqPu"
>
  I'am a button
</button>
`;

exports[`SecondaryButton should render correctly 1`] = `
.jujSlz {
  border: 2px solid palevioletred;
  background-color: palevioletred;
  color: white;
  padding: 10px;
  border-radius: 4px;
  cursor: pointer;
  -webkit-transition: 300ms all;
  transition: 300ms all;
  font-size: 16px;
  background-color: transparent;
  color: palevioletred;
}

.jujSlz:hover {
  background-color: mediumvioletred;
  border-color: mediumvioletred;
}

.jujSlz:hover {
  background-color: transparent;
  color: mediumvioletred;
}

<button
  className="sc-bwzfXH jujSlz"
>
  I'am a button
</button>
`;
